# taura

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  why_not_just_use vector_spaces.txt
.github/workflows/: ci.yml  dependency-updates.yml  release.yml
data/: English20Kikuyu20Pairs2029.xlsx
data/processed/: bible_parallel.csv  test.csv  train.csv  val.csv
data/tokenized/: test.pt  train.pt  val.pt
models/: model_config.json  tokenizer_config.json  training_history.json
models/best_model/: config.json  generation_config.json
models/final_model/: model.safetensors
notebooks/: translation_demo.ipynb
results/: evaluation_results.json  translation_examples.json
src/data/: explore_data.py  preprocess.py  tokenize.py
src/data/preprocessing/: __init__.py  bible_cli.py  bible_parser.py  bible_utils.py  generate_all_bible_structure.py  main.py  preprocess.py  test_bible_parser.py  utils.py
src/data/preprocessing/structure/: bible_structure.py  generate_complete_structure.py
src/features/: BIBLE_FEATURE_SUMMARY.md
src/models/: evaluate.py  train.py  translate.py  translation_model.py
tests/unit/: test_bible_cli.py  test_bible_parser.py  test_bible_structure.py  test_bible_utils.py  test_generate_complete_structure.py
